@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-03T01:01:37Z",
+  "timestamp" : "2025-02-04T01:00:33Z",
   "count_outdated" : 828,
   "uniques_outdated" : 438,
-  "count" : 840,
-  "uniques" : 447,
+  "count" : 844,
+  "uniques" : 451,
   "clones" : [
     {
       "timestamp": "2025-01-31T00:00:00Z",
@@ -31,6 +31,15 @@
       "uniques": 7,
       "uniques_minmax": [ 7, 7 ],
       "uniques_decinc": [ 0, 7 ]
+    },
+    {
+      "timestamp": "2025-02-03T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 4,
+      "uniques_minmax": [ 4, 4 ],
+      "uniques_decinc": [ 0, 4 ]
     }
   ]
 }
