@@ -1,6 +1,6 @@
 {
-  "count": 12,
-  "uniques": 8,
+  "count": 16,
+  "uniques": 11,
   "clones": [
     {
       "timestamp": "2025-01-31T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2025-02-02T00:00:00Z",
       "count": 10,
       "uniques": 7
+    },
+    {
+      "timestamp": "2025-02-03T00:00:00Z",
+      "count": 4,
+      "uniques": 4
     }
   ]
 }
