@@ -1,3 +1,12 @@
+2025-02-04T01:00:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13126074968 # 555
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-04
+* notice: last 14d: unq all: 11 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 438 828 / 447 840
+* notice: next accum: outdated-unq outdated-all / unq all: 438 828 / 451 844
+* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -0 -0 / +4 +4 -0 -0 / 4 4
+* notice: removed / changed dates: [] / [2025-02-03]
+
 2025-02-03T01:01:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13104301525 # 554
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-03
